# pandax

./: .gitignore  README.md  SETUP.md  export_conda_envs.sh  main.py  pyrightconfig.json  requirements.txt  setup_everything.sh  test.ipynb  verify_datasets_are_copied.sh
conda-envs/: export_conda_envs.sh
cost_modeling/: cost-generated-data.ipynb  cudf-cost-modelling.ipynb  cudf-unique.ipynb  data_generation.py  datageneration.ipynb  filtering-groupby-cudf.ipynb  movement-cost-100k-arrow.ipynb  movement-cost-100k.ipynb  movement-cost-mixed-gpu-cpu.ipynb  movement-cost-mixed.ipynb  movement-cost-numerical-columns.ipynb  movement-cost-numerical-gpu-cpu.ipynb  movement-cost-numerical.ipynb  movement-cost-string-gpu-cpu.ipynb  movement-cost-string.ipynb  movement-cost.ipynb  test-sample.ipynb  test.ipynb  xgb_booster.json  xgb_booster.model  xgb_model.json
datasets/: copier.sh
dias_datasets/: copier.sh
dias_notebooks/: README.md  merge_test.ipynb
ds_datasets/: copier.sh
pandax_extension/: README.md  jupyter_server_config.py  pyproject.toml  run_pandax_extension_server.sh
pandax_extension/pandax_ext/: __init__.py  application.py
plots/: plot_speedup.py
rapids-25.02/: create_rapids_26_02_prefix.sh  environment_from_history.yml
runner/: bench_utils.py  debug_one.py  log_times.py  mult_runs.sh  run_all.py  run_nb.py
tpch/: duckdb_tpch.py  get_query_result_in_pd.py  tpch.py  tpch_header.py
utils/: agent_flow.py  agent_flow_cpu.py  agent_flow_google.py  benchmarks.py  diff.py  dynamic_regression.py  execution.py  llm.py  logging_utils.py  main_cpu.py  (+11 more)
(+9019 files in other folders)
